@@ -33,7 +33,7 @@ foreach my $k (sort keys %wxf)
 
     my $gfx=$page->gfx;
 
-#    $gfx->textlabel(50,800,$helv,20,$wxf{$k},-hspace=>90);
+#    $gfx->textlabel(50,800,$helv,20,$wxf{$k},-hscale=>90);
     $gfx->textlabel(50,800,$helv,20,$wxf{$k});
     
     foreach $x (0..15) 
@@ -41,7 +41,7 @@ foreach my $k (sort keys %wxf)
         foreach $y (0..15) 
         {
             $gfx->textlabel(50+($sx*$x),50+($sy*$y),$xf,$fx,pack('C',$y*16+$x));
-            $gfx->textlabel(50+($sx*$x),50+($sy*$y)-6,$helv,6,nameByUni($y*16+$x),-color=>'#a00000',-hspace=>80,-rotate=>-15);
+            $gfx->textlabel(50+($sx*$x),50+($sy*$y)-6,$helv,6,nameByUni($y*16+$x),-color=>'#a00000',-hscale=>80,-rotate=>-15);
         }
     }
 
@@ -92,7 +92,7 @@ foreach my $k (sort keys %wxf)
                     $gfx->add($xf->text_cid(pack('n',$xo)),'Tj');
     
                     $gfx->font($helv,100);
-                    $gfx->hspace(80);
+                    $gfx->hscale(80);
                     $gfx->translate(25,860);
                     $gfx->text("G+$xo"); 
                     $gfx->translate(25,10);
@@ -106,7 +106,7 @@ foreach my $k (sort keys %wxf)
                         $gfx->fillcolor('blue');
                     }
     
-                    $gfx->hspace(70);
+                    $gfx->hscale(70);
                     $gfx->translate(975,860);
                     $gfx->text_right($name);
     
@@ -116,7 +116,7 @@ foreach my $k (sort keys %wxf)
     
                     $gfx->fillcolor('#008000');
                     $gfx->translate(500,950);
-                    $gfx->hspace(70);
+                    $gfx->hscale(70);
                     my $ci = charinfo($xf->uniByCId($xo) || 0);
                     $gfx->font($helv,50);
                     $gfx->text_center($ci->{name});
