@@ -20,7 +20,7 @@ foreach my $z (0 .. 0xf) {
     $page = $pdf->page;
     $gfx=$page->gfx;
     
-    $gfx->textlabel(300,750,$fnt,20,'RGB Colorspace',-color=>'#000',-hspace=>125,-center=>1);
+    $gfx->textlabel(300,750,$fnt,20,'RGB Colorspace',-color=>'#000',-hscale=>125,-center=>1);
 
     $gfx->strokecolor('#000');
 
@@ -30,7 +30,7 @@ foreach my $z (0 .. 0xf) {
             $gfx->fillcolor($t);
             $gfx->circle($cx+($x-8)*$cs,$cy+($y-8)*$cs,$cr);
             $gfx->fillstroke;
-            $gfx->textlabel($cx+($x-8)*$cs,$cy+($y-8)*$cs,$fnt,8,$t,-color=>'#000',-rotate=>$ang,-hspace=>85,-center=>1);
+            $gfx->textlabel($cx+($x-8)*$cs,$cy+($y-8)*$cs,$fnt,8,$t,-color=>'#000',-rotate=>$ang,-hscale=>85,-center=>1);
         }
     }
 }
@@ -39,7 +39,7 @@ foreach my $z (0 .. 0xf) {
     $page = $pdf->page;
     $gfx=$page->gfx;
     
-    $gfx->textlabel(300,750,$fnt,20,'RGB Colorspace (Gamma=2.2)',-color=>'#000',-hspace=>125,-center=>1);
+    $gfx->textlabel(300,750,$fnt,20,'RGB Colorspace (Gamma=2.2)',-color=>'#000',-hscale=>125,-center=>1);
 
     $gfx->strokecolor('#000');
 
@@ -49,7 +49,7 @@ foreach my $z (0 .. 0xf) {
             $gfx->fillcolor($x/0xf,$z/0xf,$y/0xf);
             $gfx->circle($cx+($x-8)*$cs,$cy+($y-8)*$cs,$cr);
             $gfx->fillstroke;
-            $gfx->textlabel($cx+($x-8)*$cs,$cy+($y-8)*$cs,$fnt,8,$t,-color=>'#000',-rotate=>$ang,-hspace=>85,-center=>1);
+            $gfx->textlabel($cx+($x-8)*$cs,$cy+($y-8)*$cs,$fnt,8,$t,-color=>'#000',-rotate=>$ang,-hscale=>85,-center=>1);
         }
     }
 }
@@ -58,7 +58,7 @@ foreach my $z (0 .. 0xf) {
     $page = $pdf->page;
     $gfx=$page->gfx;
     
-    $gfx->textlabel(300,750,$fnt,20,'CMYK Colorspace',-color=>'#000',-hspace=>125,-center=>1);
+    $gfx->textlabel(300,750,$fnt,20,'CMYK Colorspace',-color=>'#000',-hscale=>125,-center=>1);
 
     $gfx->strokecolor('#000');
 
@@ -68,7 +68,7 @@ foreach my $z (0 .. 0xf) {
             $gfx->fillcolor($t);
             $gfx->circle($cx+($x-8)*$cs,$cy+($y-8)*$cs,$cr);
             $gfx->fillstroke;
-            $gfx->textlabel($cx+($x-8)*$cs,$cy+($y-8)*$cs,$fnt,8,$t,-color=>'#000',-rotate=>$ang,-hspace=>85,-center=>1);
+            $gfx->textlabel($cx+($x-8)*$cs,$cy+($y-8)*$cs,$fnt,8,$t,-color=>'#000',-rotate=>$ang,-hscale=>85,-center=>1);
         }
     }
 }
@@ -77,7 +77,7 @@ foreach my $z (0 .. 0xf) {
     $page = $pdf->page;
     $gfx=$page->gfx;
     
-    $gfx->textlabel(300,750,$fnt,20,'Lab Colorspace',-color=>'#000',-hspace=>125,-center=>1);
+    $gfx->textlabel(300,750,$fnt,20,'Lab Colorspace',-color=>'#000',-hscale=>125,-center=>1);
 
     $gfx->strokecolor('#000');
 
@@ -87,7 +87,7 @@ foreach my $z (0 .. 0xf) {
             $gfx->fillcolor($t);
             $gfx->circle($cx+($x-8)*$cs,$cy+($y-8)*$cs,$cr);
             $gfx->fillstroke;
-            $gfx->textlabel($cx+($x-8)*$cs,$cy+($y-8)*$cs,$fnt,8,$t,-color=>'#000',-rotate=>$ang,-hspace=>85,-center=>1);
+            $gfx->textlabel($cx+($x-8)*$cs,$cy+($y-8)*$cs,$fnt,8,$t,-color=>'#000',-rotate=>$ang,-hscale=>85,-center=>1);
         }
     }
 }
@@ -98,7 +98,7 @@ while (scalar @cols > 0) {
     $page = $pdf->page;
     $gfx=$page->gfx;
     
-    $gfx->textlabel(300,750,$fnt,20,'Named Colors (RGB)',-color=>'#000',-hspace=>125,-center=>1);
+    $gfx->textlabel(300,750,$fnt,20,'Named Colors (RGB)',-color=>'#000',-hscale=>125,-center=>1);
 
     $gfx->strokecolor('#000');
 
@@ -110,7 +110,7 @@ while (scalar @cols > 0) {
             $gfx->fillcolor($t);
             $gfx->circle($cx+($x-8)*$cs,$cy+($y-8)*$cs,$cr);
             $gfx->fillstroke;
-            $gfx->textlabel($cx+($x-8)*$cs,$cy+($y-8)*$cs,$fnt,7,$t,-color=>'#000',-rotate=>$ang,-hspace=>85,-center=>1);
+            $gfx->textlabel($cx+($x-8)*$cs,$cy+($y-8)*$cs,$fnt,7,$t,-color=>'#000',-rotate=>$ang,-hscale=>85,-center=>1);
         }
     }
 }
