@@ -1,4 +1,4 @@
-use Test::More tests => 31;
+use Test::More tests => 33;
 
 use warnings;
 use strict;
@@ -308,3 +308,22 @@ $gfx->circle(144, 216, 72);
 $gfx->stroke();
 like($pdf->stringify, qr/216 216 m 216 225.46 214.14 234.82 210.52 243.55 c 206.9 252.29 201.6 260.23 194.91 266.91 c 188.23 273.6 180.29 278.9 171.55 282.52 c 162.82 286.14 153.46 288 144 288 c 134.54 288 125.18 286.14 116.45 282.52 c 107.71 278.9 99.774 273.6 93.088 266.91 c 86.402 260.23 81.099 252.29 77.481 243.55 c 73.862 234.82 72 225.46 72 216 c 72 206.54 73.862 197.18 77.481 188.45 c 81.099 179.71 86.402 171.77 93.088 165.09 c 99.774 158.4 107.71 153.1 116.45 149.48 c 125.18 145.86 134.54 144 144 144 c 153.46 144 162.82 145.86 171.55 149.48 c 180.29 153.1 188.23 158.4 194.91 165.09 c 201.6 171.77 206.9 179.71 210.52 188.45 c 214.14 197.18 216 206.54 216 216 c h S/,
      q{circle});
+
+# hspace (deprecated)
+
+$pdf = PDF::API2->new();
+$pdf->{forcecompress} = 0;
+$gfx = $pdf->page->gfx();
+
+$gfx->hspace(105);
+like($pdf->stringify, qr/105 Tz/, q{hspace(105)});
+
+# hscale
+
+$pdf = PDF::API2->new();
+$pdf->{forcecompress} = 0;
+$gfx = $pdf->page->gfx();
+
+$gfx->hscale(105);
+like($pdf->stringify, qr/105 Tz/, q{hscale(105)});
+
